# pihole-optimizer-agent

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  SOC_INSTALLATION.md  TRANSPORT_SETUP.md  main.py  pyproject.toml
logs/: report_20260213_231058.md  report_20260213_231436.md  report_20260214_000242.md  report_20260214_002705.md
neo4j/: docker-compose.yml  seed_schema.cypher
src/agent/: analyzer.py  email_responder.py  soc_agent.py  soc_heuristics.py  soc_safety.py
src/config/: known_safe.py  protected_entities.py
src/mcp_server/: server.py
src/models/: alert_types.py  soc_state.py
src/tools/: enrichment_tools.py  firewall_tools.py  neo4j_tools.py  ntopng_tools.py  pihole_tools.py  suricata_tools.py
systemd/: README.md  pihole-mcp.service.example  soc-agent.service.example  soc-agent.timer.example  soc-enrich.service.example  soc-enrich.timer.example
