[project]
name = "pihole-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.79.0",
    "fastmcp>=2.14.5",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.3.3",
    "langchain-core>=1.2.12",
    "langgraph>=1.0.8",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
